--- a/styel.css
+++ b/styel.css
@@ -108,3 +108,30 @@ body {
   display: none;
   transition: 3s;
 }
+
+@media (max-width: 480px) {
+  .search input {
+    font-size: 14px;
+    padding: 10px 5px;
+  }
+  .weather h1 {
+    font-size: 40px;
+  }
+  .weather h2 {
+    font-size: 25px;
+  }
+  .details {
+    padding: 0;
+  }
+  .humidity,
+  .wind {
+    font-size: 18px;
+  }
+  .col img {
+    width: 30px;
+  }
+  .humidity__text,
+  .wind__text {
+    font-size: 15px;
+  }
+}
